RESOLVED FIXED305905
Fix table layout to properly handle visibility:collapse on columns
https://bugs.webkit.org/show_bug.cgi?id=305905
Summary Fix table layout to properly handle visibility:collapse on columns
Ahmad Saleem
Reported 2026-01-20 21:00:41 PST
ssia - we are failing these since ages, let's fix them once at for all.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-20 21:00:51 PST
Ahmad Saleem
Comment 2 2026-01-20 21:05:58 PST
EWS
Comment 3 2026-01-21 23:14:21 PST
Committed 305997@main (3ea149a5173a): <https://commits.webkit.org/305997@main> Reviewed commits have been landed. Closing PR #56945 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.