Source/WebCore/rendering/AutoTableLayout.cpp
@@ -49,6 +49,17 @@ void AutoTableLayout::recalcColumn(unsigned effCol)
 {
     Layout& columnLayout = m_layoutStruct[effCol];
 
+    // Check if this column is collapsed.
+    if (CheckedPtr colElement = m_table->colElement(effCol); colElement && colElement->style().visibility() == Visibility::Collapse) {
+        columnLayout.effectiveLogicalWidth = CSS::Keyword::Auto { };
+        columnLayout.effectiveMinLogicalWidth = 0;
+        columnLayout.effectiveMaxLogicalWidth = 0;
+        columnLayout.minLogicalWidth = 0;
+        columnLayout.maxLogicalWidth = 0;
+        columnLayout.logicalWidth = CSS::Keyword::Auto { };
+        return;
+    }
+
     RenderTableCell* fixedContributor = nullptr;
     RenderTableCell* maxContributor = nullptr;
 
@@ -599,6 +610,12 @@ void AutoTableLayout::layout()
 
     // fill up every cell with its minWidth
     for (size_t i = 0; i < nEffCols; ++i) {
+        // Check if this column is collapsed
+        if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse) {
+            m_layoutStruct[i].computedLogicalWidth = 0;
+            continue;
+        }
+
         float cellLogicalWidth = m_layoutStruct[i].effectiveMinLogicalWidth;
         m_layoutStruct[i].computedLogicalWidth = cellLogicalWidth;
         available -= cellLogicalWidth;
@@ -627,6 +644,9 @@ void AutoTableLayout::layout()
     // allocate width to percent cols
     if (available > 0 && havePercent) {
         for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             auto& logicalWidth = m_layoutStruct[i].effectiveLogicalWidth;
             if (logicalWidth.isPercentOrCalculated()) {
                 float cellLogicalWidth = std::max<float>(m_layoutStruct[i].effectiveMinLogicalWidth, Style::evaluateMinimum<float>(logicalWidth, tableLogicalWidth, Style::ZoomFactor { m_layoutStruct[i].usedZoom }));
@@ -639,6 +659,9 @@ void AutoTableLayout::layout()
             float excess = tableLogicalWidth * (totalPercent - 100) / 100;
             for (unsigned i = nEffCols; i; ) {
                 --i;
+                if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                    continue;
+
                 if (m_layoutStruct[i].effectiveLogicalWidth.isPercentOrCalculated()) {
                     float cellLogicalWidth = m_layoutStruct[i].computedLogicalWidth;
                     float reduction = std::min(cellLogicalWidth,  excess);
@@ -655,6 +678,9 @@ void AutoTableLayout::layout()
     // then allocate width to fixed cols
     if (available > 0) {
         for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             auto& logicalWidth = m_layoutStruct[i].effectiveLogicalWidth;
             auto usedZoom = m_layoutStruct[i].usedZoom;
             if (auto fixedLogicalWidth = logicalWidth.tryFixed(); fixedLogicalWidth && fixedLogicalWidth->resolveZoom(Style::ZoomFactor { usedZoom }) > m_layoutStruct[i].computedLogicalWidth) {
@@ -674,6 +700,9 @@ void AutoTableLayout::layout()
             equalWidthForZeroLengthColumns = available / numberOfNonEmptyAuto;
         }
         for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             auto& column = m_layoutStruct[i];
             if (!column.effectiveLogicalWidth.isAuto() || column.emptyCellsOnly)
                 continue;
@@ -691,6 +720,9 @@ void AutoTableLayout::layout()
     // spread over fixed columns
     if (available > 0 && numFixed) {
         for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             auto& logicalWidth = m_layoutStruct[i].effectiveLogicalWidth;
             if (logicalWidth.isFixed()) {
                 float cellLogicalWidth = available * m_layoutStruct[i].effectiveMaxLogicalWidth / totalFixed;
@@ -704,6 +736,9 @@ void AutoTableLayout::layout()
     // spread over percent columns
     if (available > 0 && m_hasPercent && totalPercent < 100) {
         for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             auto& logicalWidth = m_layoutStruct[i].effectiveLogicalWidth;
             if (auto percentageLogicalWidth = logicalWidth.tryPercentage()) {
                 float cellLogicalWidth = available * percentageLogicalWidth->value / totalPercent;
@@ -719,9 +754,20 @@ void AutoTableLayout::layout()
     // spread over the rest
     if (available > 0 && nEffCols > numAutoEmptyCellsOnly) {
         unsigned total = nEffCols - numAutoEmptyCellsOnly;
+        // Count collapsed columns to subtract from total
+        unsigned numCollapsed = 0;
+        for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                numCollapsed++;
+        }
+        total -= numCollapsed;
+
         // still have some width to spread
-        for (unsigned i = nEffCols; i; ) {
+        for (unsigned i = nEffCols; i && total > 0; ) {
             --i;
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             // variable columns with empty cells only don't get any width
             if (m_layoutStruct[i].effectiveLogicalWidth.isAuto() && m_layoutStruct[i].emptyCellsOnly)
                 continue;
@@ -736,6 +782,9 @@ void AutoTableLayout::layout()
         // All columns in this table are empty with 'width: auto'.
         auto equalWidthForColumns = available / numAutoEmptyCellsOnly;
         for (size_t i = 0; i < nEffCols; ++i) {
+            if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse)
+                continue;
+
             auto& column = m_layoutStruct[i];
             column.computedLogicalWidth = equalWidthForColumns;
             available -= column.computedLogicalWidth;
@@ -756,6 +805,12 @@ void AutoTableLayout::layout()
     LayoutUnit pos;
     for (size_t i = 0; i < nEffCols; ++i) {
         m_table->setColumnPosition(i, pos);
+
+        if (CheckedPtr colElement = m_table->colElement(i); colElement && colElement->style().visibility() == Visibility::Collapse) {
+            // Don't add width or spacing for collapsed columns.
+            continue;
+        }
+
         pos += LayoutUnit::fromFloatCeil(m_layoutStruct[i].computedLogicalWidth) + m_table->hBorderSpacing();
     }
     m_table->setColumnPosition(m_table->columnPositions().size() - 1, pos);
